--- a/wqredisclient/theme/light/Resources.xaml
+++ b/wqredisclient/theme/light/Resources.xaml
@@ -405,4 +405,200 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <!-- ComboBox style -->
+    <ControlTemplate x:Key="ComboBoxToggleButton" TargetType="ToggleButton">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="30" />
+            </Grid.ColumnDefinitions>
+            <Border x:Name="Border" Grid.ColumnSpan="2" BorderThickness="1" Background="{DynamicResource inputBackgroundBrush}" BorderBrush="{DynamicResource inputBorderBrush}">                
+                <Border.Effect>
+                    <DropShadowEffect Color="{DynamicResource shadowEffectColor}" Opacity="0.1" ShadowDepth="0" BlurRadius="0" />
+                </Border.Effect>
+            </Border>
+            <Path Width="8" Height="5" Stretch="Fill" x:Name="Arrow" Grid.Column="1" RenderTransformOrigin="0.5 0.5" Fill="{DynamicResource icoNormalBrush}" HorizontalAlignment="Center" VerticalAlignment="Center" Data="{StaticResource svgExpand}">
+                <Path.RenderTransform>
+                    <RotateTransform Angle="0" />
+                </Path.RenderTransform>
+            </Path>
+        </Grid>
+        <ControlTemplate.Triggers>
+            <Trigger Property="ToggleButton.IsMouseOver" Value="true">
+                <Setter TargetName="Border" Property="BorderBrush" Value="{DynamicResource inputBorderLightBrush}" />
+                <Setter TargetName="Border" Property="Effect">
+                    <Setter.Value>
+                        <DropShadowEffect Color="{DynamicResource shadowEffectColor}" Opacity="0.1" ShadowDepth="1" BlurRadius="3" />
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+            <Trigger Property="ToggleButton.IsChecked" Value="true">
+                <Setter TargetName="Arrow" Property="RenderTransform">
+                    <Setter.Value>
+                        <RotateTransform Angle="-180" />
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+    <Style x:Key="{x:Type ComboBox}" TargetType="ComboBox">
+        <Setter Property="SnapsToDevicePixels" Value="true"/>
+        <Setter Property="OverridesDefaultStyle" Value="true"/>
+        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto"/>
+        <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto"/>
+        <Setter Property="ScrollViewer.CanContentScroll" Value="true"/>
+        <Setter Property="MinWidth" Value="120"/>
+        <Setter Property="MinHeight" Value="20"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ComboBox">
+                    <Grid>
+                        <ToggleButton Name="ToggleButton" Template="{StaticResource ComboBoxToggleButton}" Grid.Column="2" Focusable="false" IsChecked="{Binding Path=IsDropDownOpen,Mode=TwoWay,RelativeSource={RelativeSource TemplatedParent}}" ClickMode="Press" />
+                        <ContentPresenter Margin="8 0 38 0" Name="ContentSite" IsHitTestVisible="False"  Content="{TemplateBinding SelectionBoxItem}" ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}" ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}" VerticalAlignment="Center" HorizontalAlignment="Left" />                        
+                        <Popup Name="Popup" Placement="Bottom" IsOpen="{TemplateBinding IsDropDownOpen}" AllowsTransparency="True" Focusable="False" PopupAnimation="Slide">
+                            <Grid Margin="4 -1 4 4" Name="DropDown" SnapsToDevicePixels="True"  MinWidth="{TemplateBinding ActualWidth}" MaxHeight="{TemplateBinding MaxDropDownHeight}">
+                                <Border x:Name="DropDownBorder" Background="{DynamicResource inputBackgroundBrush}" BorderThickness="1" BorderBrush="{DynamicResource inputBorderLightBrush}">
+                                    <Border.Effect>
+                                        <DropShadowEffect Color="{DynamicResource shadowEffectColor}" Opacity="0.2" ShadowDepth="1" BlurRadius="3" />
+                                    </Border.Effect>
+                                </Border>
+                                <ScrollViewer Margin="1" SnapsToDevicePixels="True">
+                                    <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Contained" />
+                                </ScrollViewer>
+                            </Grid>
+                        </Popup>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="HasItems" Value="false">
+                            <Setter TargetName="DropDownBorder" Property="MinHeight" Value="95"/>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter Property="Opacity" Value="0.5"/>
+                        </Trigger>
+                        <Trigger Property="IsGrouping" Value="true">
+                            <Setter Property="ScrollViewer.CanContentScroll" Value="false"/>
+                        </Trigger>                                                
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="{x:Type ComboBoxItem}" TargetType="ComboBoxItem">
+        <Setter Property="SnapsToDevicePixels" Value="true"/>
+        <Setter Property="OverridesDefaultStyle" Value="true"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ComboBoxItem">
+                    <Border Name="border" Padding="4" SnapsToDevicePixels="true">
+                        <TextBlock x:Name="item" Text="{TemplateBinding Content}" Foreground="{DynamicResource textBaseBrush}" />
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsHighlighted" Value="true">
+                            <Setter TargetName="border" Property="Background" Value="{DynamicResource dialogBackgroundBrush}"/>
+                            <Setter TargetName="item" Property="Foreground" Value="{DynamicResource textNormalBrush}"/>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter Property="Opacity" Value="0.5"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <!-- icobutton normal style -->
+    <Style x:Key="normalButtonStyle" TargetType="{x:Type wq:IcoButton}">
+        <Setter Property="SnapsToDevicePixels" Value="true"/>
+        <Setter Property="OverridesDefaultStyle" Value="true"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type wq:IcoButton}">
+                    <Grid SnapsToDevicePixels="True">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Border x:Name="border" Grid.Column="0" Grid.ColumnSpan="2" Background="{DynamicResource inputBackgroundBrush}" BorderThickness="1" BorderBrush="{DynamicResource inputBorderBrush}">
+                            <Border.Effect>
+                                <DropShadowEffect Color="{DynamicResource shadowEffectColor}" Opacity="0" ShadowDepth="0" BlurRadius="0" />
+                            </Border.Effect>
+                        </Border>
+                        <Path x:Name="path" Grid.Column="0" Width="14" Height="14" Margin="14 0" Data="{TemplateBinding Ico}" Fill="{DynamicResource icoNormalBrush}" Stretch="Fill" />
+                        <Label Foreground="{DynamicResource textBaseBrush}" Margin="0 0 14 0" VerticalContentAlignment="Center" Height="38" x:Name="content" Grid.Column="1" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Content="{TemplateBinding Content}" />
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <Setter Property="Effect" TargetName="border">
+                                <Setter.Value>
+                                    <DropShadowEffect Color="{DynamicResource shadowEffectColor}" Opacity="0.2" ShadowDepth="1" BlurRadius="3" />
+                                </Setter.Value>
+                            </Setter>
+                            <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource inputBorderLightBrush}" />
+                            <Setter Property="Fill" TargetName="path" Value="{DynamicResource icoLightBrush}" />
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="true">
+                            <Setter Property="Effect" TargetName="border">
+                                <Setter.Value>
+                                    <DropShadowEffect Color="{DynamicResource shadowEffectColor}" Opacity="0" ShadowDepth="0" BlurRadius="0" />
+                                </Setter.Value>
+                            </Setter>
+                            <Setter Property="Background" TargetName="border" Value="{DynamicResource dialogBackgroundBrush}" />
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter Property="Opacity" Value="0.5" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <!-- icobutton primary style -->
+    <Style x:Key="primaryButtonStyle" TargetType="{x:Type wq:IcoButton}">
+        <Setter Property="SnapsToDevicePixels" Value="true"/>
+        <Setter Property="OverridesDefaultStyle" Value="true"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type wq:IcoButton}">
+                    <Grid SnapsToDevicePixels="True">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Border x:Name="border" Grid.Column="0" Grid.ColumnSpan="2" Background="{DynamicResource primaryBrush}">
+                            <Border.Effect>
+                                <DropShadowEffect Color="{DynamicResource shadowEffectColor}" Opacity="0" ShadowDepth="0" BlurRadius="0" />
+                            </Border.Effect>
+                        </Border>
+                        <Path x:Name="path" Grid.Column="0" Width="16" Height="16" Margin="14 0" Data="{TemplateBinding Ico}" Fill="White" Stretch="Fill" />
+                        <Label Foreground="White" Margin="0 0 14 0" VerticalContentAlignment="Center" Height="38" x:Name="content" Grid.Column="1" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Content="{TemplateBinding Content}" />
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <Setter Property="Effect" TargetName="border">
+                                <Setter.Value>
+                                    <DropShadowEffect Color="{DynamicResource shadowEffectColor}" Opacity="0.6" ShadowDepth="1" BlurRadius="3" />
+                                </Setter.Value>
+                            </Setter>
+                            <Setter Property="Background" TargetName="border" Value="{DynamicResource primaryDarkBrush}" />
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="true">
+                            <Setter Property="Effect" TargetName="border">
+                                <Setter.Value>
+                                    <DropShadowEffect Color="{DynamicResource shadowEffectColor}" Opacity="0" ShadowDepth="0" BlurRadius="0" />
+                                </Setter.Value>
+                            </Setter>
+                            <Setter Property="Opacity" Value="0.6" />
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter Property="Opacity" Value="0.3" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
