--- a/wqredisclient/components/SearchKeyBox.xaml
+++ b/wqredisclient/components/SearchKeyBox.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              x:Name="ctl"
              d:DesignHeight="38" d:DesignWidth="300">
-    <Grid SnapsToDevicePixels="True" Background="White">
+    <Grid SnapsToDevicePixels="True" Background="{DynamicResource inputBackgroundBrush}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="38" />
