--- a/wqredisclient/window/MainWindow.xaml
+++ b/wqredisclient/window/MainWindow.xaml
@@ -80,7 +80,7 @@
                 <StackPanel Grid.Row="0" Margin="10">
                     <wq:SearchKeyBox x:Name="searchKeyBox" />
                 </StackPanel>
-                <TreeView Style="{StaticResource redisKeyTreeViewStyle}" Grid.Row="1" x:Name="redisKeysBox">
+                <TreeView Style="{StaticResource redisKeyTreeViewStyle}" VirtualizingStackPanel.IsVirtualizing="False" TreeView.SelectedItemChanged="redisKeysBox_SelectedItemChanged"  Grid.Row="1" x:Name="redisKeysBox">
                     <TreeView.ItemTemplate>
                         <HierarchicalDataTemplate DataType="{x:Type et:RedisKey}" ItemsSource="{Binding Keys}">
                         <Border Background="Transparent" Padding="10 6">
@@ -94,16 +94,40 @@
             </Grid>           
         </Grid>
         <Grid Grid.Column="1" Grid.Row="1">
-            <TreeView Grid.Row="1">
-                <TreeViewItem Header="Field">
-                    <TreeViewItem Header="Open" />
-                    <TreeViewItem Header="Save" />
-                </TreeViewItem>
-                <TreeViewItem Header="View">
-
-                </TreeViewItem>
-                <TreeViewItem Header="Help" />
-            </TreeView>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+            <Grid Height="38" Margin="10" Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="auto" />
+                </Grid.ColumnDefinitions>
+                <wq:InputBox Grid.Column="0" x:Name="inputKey" IsNeedInput="True" Ico="{StaticResource svgKey}" Title="input key" />
+                <ComboBox Grid.Column="1" Margin="10 0 0 0">
+                    <ComboBoxItem>Text plain</ComboBoxItem>
+                    <ComboBoxItem>Json</ComboBoxItem>
+                    <ComboBoxItem>Hex</ComboBoxItem>
+                </ComboBox>
+            </Grid>
+            <Grid Margin="10 0 10 10" Grid.Row="1">
+                <wq:TextareaBox x:Name="inputValue" Title="input value" IsNeedInput="True" />                
+            </Grid>
+            <Grid Margin="10 0 10 10" Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <StackPanel Height="38" Orientation="Horizontal">
+                    <wq:IcoButton x:Name="btnAddKey" Style="{StaticResource primaryButtonStyle}" Ico="{StaticResource svgAddKey}">Add key</wq:IcoButton>
+                </StackPanel>
+                <StackPanel Grid.Column="1" Height="38" Orientation="Horizontal" HorizontalAlignment="Right">
+                    <wq:IcoButton x:Name="btnRefreshKey" Style="{StaticResource normalButtonStyle}" Ico="{StaticResource svgRefresh}">Reload</wq:IcoButton>
+                    <wq:IcoButton Margin="10 0 0 0" x:Name="btnDeleteKey" Style="{StaticResource normalButtonStyle}" Ico="{StaticResource svgDelete}">Delete</wq:IcoButton>
+                    <wq:IcoButton Margin="10 0 0 0" x:Name="btnSaveKey" Style="{StaticResource normalButtonStyle}" Ico="{StaticResource svgSave}">Save</wq:IcoButton>
+                </StackPanel>
+            </Grid>
         </Grid>
     </Grid>
 </Window>
