添加redis server添加/编辑窗口

--- a/wqredisclient/components/InputBox.xaml
+++ b/wqredisclient/components/InputBox.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:wqredisclient.components"
              mc:Ignorable="d" 
              d:DesignHeight="38" MinHeight="38" d:DesignWidth="300">
-    <Grid Background="{DynamicResource darkBackgroundBrush}">
+    <Grid SnapsToDevicePixels="True" Background="{DynamicResource darkBackgroundBrush}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="*" />
